--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "body-parser": "^2.2.0",
     "express": "^5.1.0",
+    "express-fileupload": "^1.5.1",
     "mime-types": "^3.0.1",
     "morgan": "^1.10.0",
     "multer": "^2.0.1",
